--- a/package.json
+++ b/package.json
@@ -1,1 +1,1 @@
-{ "dependencies": { "express": "^4.19.2" } }
+{ "dependencies": { "express": "^4.19.2", "http": "^0.0.1-security", "path": "^0.12.7", "socket.io": "^4.7.5" } }
